fix: admin cant see other appointments on dashboard
